Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26604

ListView/GridView do not reset currentIndex when the model changes

XMLWordPrintable

    • 22c68738bf2a83eb228b412fbd251bcdf8e7056e

      When the model is changed the views reset the position of the view back to 0, but the currentIndex is not reset.

        For Gerrit Dashboard: QTBUG-26604
        # Subject Branch Project Status CR V

            martjone Martin Jones (closed Nokia identity) (Inactive)
            martjone Martin Jones (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes