Changing model after componentComplete should reset currentIndex

When the model is changed reset currentIndex back to 0.

Task-number: QTBUG-26604
Change-Id: I1934e083819537d416acd85c75362daff382aa04
Reviewed-by: Bea Lam <bea.lam@nokia.com>